--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,12 +4,18 @@
   <meta charset="utf-8">
   <title>{{ site.title }}</title>
   <link href="/css/styles.css" rel="stylesheet">
+  <!--
+    <link rel="stylesheet" href="https://a.fsdn.com/sd/css/app.css?release_20160315">
+  -->
 </head>
 <body>
-  <h3>{{ site.title }}</h3>
+  <h2 id="name">{{ site.title }}</h2>
   <div>
-    <ul>
+    <ul class="nav-site">
       <li><a href="/">Home</a></li>
+      <li><a href="http://localhost:4000/static/myth.html">The Myth</a></li>
+      <li><a href="http://localhost:4000/static/legend.html">The Legend</a></li>
+      <li><a href="http://localhost:4000/static/man.html">The Man</a></li>
     </ul>
   </div>
   <div class="container">
