--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
   <h2 id="name">{{ site.title }}</h2>
   <div>
     <ul class="nav-site">
-      <li><a href="/">Home</a></li>
+      <li><a href="http://localhost:4000">Home</a></li>
       <li><a href="http://localhost:4000/static/myth.html">The Myth</a></li>
       <li><a href="http://localhost:4000/static/legend.html">The Legend</a></li>
       <li><a href="http://localhost:4000/static/man.html">The Man</a></li>
