--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,10 +12,10 @@
   <h2 id="name">{{ site.title }}</h2>
   <div>
     <ul class="nav-site">
-      <li><a href="http://localhost:4000">Home</a></li>
-      <li><a href="http://localhost:4000/static/myth.html">The Myth</a></li>
-      <li><a href="http://localhost:4000/static/legend.html">The Legend</a></li>
-      <li><a href="http://localhost:4000/static/man.html">The Man</a></li>
+      <li><a href="http://alirezaandersen.github.io/">Home</a></li>
+      <li><a href="http://alirezaandersen.github.io/static/myth.html">The Myth</a></li>
+      <li><a href="http://alirezaandersen.github.io/static/legend.html">The Legend</a></li>
+      <li><a href="http://alirezaandersen.github.io/static/man.html">The Man</a></li>
     </ul>
   </div>
   <div class="container">
