--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>{{ site.title }}</title>
   <link href="/css/styles.css" rel="stylesheet">
+    <link href='css/bootstrap.css' rel='stylesheet'>
   <!--
     <link rel="stylesheet" href="https://a.fsdn.com/sd/css/app.css?release_20160315">
   -->
