--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,20 +3,34 @@
 <head>
   <meta charset="utf-8">
   <title>{{ site.title }}</title>
-  <link href="/css/styles.css" rel="stylesheet">
-    <link href='css/bootstrap.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link href="/css/styles.css" rel="stylesheet">
   <!--
     <link rel="stylesheet" href="https://a.fsdn.com/sd/css/app.css?release_20160315">
   -->
 </head>
 <body>
-  <h2 id="name">{{ site.title }}</h2>
-  <div>
+  <!-- <h2 id="name">{{ site.title }}</h2> -->
+  <!-- <span class="glyphicon glyphicon-search" aria-hidden="true"></span> -->
+
+  <div class='col-md-12 navbar navbar-default navbar-fixed-top'>
+      <a href='/' class='navbar-brand'>Alireza Jace Andersen</a>
+      <ul class='nav navbar-nav navbar-right'>
+        <li><a href="http://alirezaandersen.github.io/">Home</a></li>
+        <li><a href="http://alirezaandersen.github.io/static/myth.html">The Myth</a></li>
+        <li><a href="http://alirezaandersen.github.io/static/legend.html">The Legend</a></li>
+        <li><a href="http://alirezaandersen.github.io/static/man.html">The Man</a></li>
+      </ul>
+    </div>
+
+
+  <!-- <div>
     <ul class="nav-site">
       <li><a href="http://alirezaandersen.github.io/">Home</a></li>
       <li><a href="http://alirezaandersen.github.io/static/myth.html">The Myth</a></li>
       <li><a href="http://alirezaandersen.github.io/static/legend.html">The Legend</a></li>
       <li><a href="http://alirezaandersen.github.io/static/man.html">The Man</a></li>
     </ul>
-  </div>
+  </div> -->
+
   <div class="container">
