--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,8 +1,9 @@
 {% include header.html %}
 
+<div class="top-spacing">
 <h1>{{ page.title }}</h1>
 <p>{{ page.date | date: '%B %d, %Y' }}</p>
-
 {{ content }}
+</div>
 
 {% include footer.html %}
